--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,7 @@
 .App {
   text-align: center;
+  background-color: #282c34;
+  min-height: 100vh;
 }
 
 .App-logo {
@@ -13,9 +15,15 @@
   }
 }
 
+.App-input {
+  height: 40px;
+  width: 400px;
+  font-size: larger;
+  margin: 10px;
+  border-radius: 8px;
+}
+
 .App-header {
-  background-color: #282c34;
-  min-height: 100vh;
   display: flex;
   flex-direction: column;
   align-items: center;
